# backend/src/routes/index.ts
@@ -3,6 +3,7 @@ import authRouter from './auth.routes.js';
 import userRouter from './user.routes.js';
 import projectRouter from './project.routes.js';
 import taskRouter from './task.routes.js';
+import notificationRouter from './notification.routes.js';
 
 const apiRouter = Router();
 
@@ -16,5 +17,6 @@ apiRouter.use('/auth', authRouter);
 apiRouter.use('/users', userRouter);
 apiRouter.use('/projects', projectRouter);
 apiRouter.use('/tasks', taskRouter);
+apiRouter.use('/notifications', notificationRouter);
 
 export default apiRouter;
